# mind-sdk-fhe-rust

./: Cargo.toml  README.md
examples/: Casting.rs  CiphertextFilesize.rs  FheBoolean_compare.rs  FheGeneral.rs  FheGeneral_Sum.rs  FheInt.rs  FheInt_add_group.rs  FheInt_add_unlimited.rs  FheInt_sub_unlimited.rs  FheShortint.rs  MaxValue.rs  Radix.rs  Shifting.rs  Speed.rs  Weights.rs  Zero.rs  check_01.rs  if_then_else.rs
src/: fhe_client.rs  fhe_general.rs  fhe_int.rs  fhe_shortint.rs  io.rs  lib.rs  util.rs
tests/: test_general.rs  test_int.rs  test_shortint.rs
